# Slotrr

./: .env  .env.example  .gitignore  README.md  most_booked_rooms.csv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: generate-keystore.yml
slotrr/: auth.py  config.py  db.py  email_service.py  main.py
slotrr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
slotrr/ui/: components.py  login_screen.py  theme.py
slotrr/ui/admin/: campus_map.py  dashboard.py  manage_bookings.py  manage_rooms.py  manage_users.py  reports.py
slotrr/ui/teacher/: book_room.py  dashboard.py  my_bookings.py
